# CMEP

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMEP.sln  CMakeLists.txt  LICENCE  Makefile  README.md  build.bat  build.sh  cleanup.bat  generate_clang_tidy_command.py  generate_compile_commands_msvc.py  lcov_get_coverage.sh  run_coverify.sh
EngineBase/: CMakeLists.txt
EngineBase/export_include/: Exception.hpp
EngineBase/include/: Exception.hpp
EngineBase/src/: Exception.cpp
EngineCore/: CMakeLists.txt  EngineCore.sln  EngineCore.vcxproj  EngineCore.vcxproj.filters  Makefile
EngineCore/export_include/: EngineCore.hpp
EngineCore/include/: AssetManager.hpp  Engine.hpp  EnumStringConvertor.hpp  EventHandling.hpp  Exception.hpp  GlobalSceneManager.hpp  IModule.hpp  InternalEngineObject.hpp  KVPairHelper.hpp  ModuleMediator.hpp  Object.hpp  ObjectFactory.hpp  OpaqueEngine.hpp  PlatformSemantics.hpp  Scene.hpp  SceneLoader.hpp  SceneManager.hpp  SceneObject.hpp  buildinfo.hpp
EngineCore/include/Assets/: Asset.hpp  AssetManager.hpp  Font.hpp  Mesh.hpp  Texture.hpp
EngineCore/include/Factories/: FontFactory.hpp  ObjectFactory.hpp  TextureFactory.hpp
EngineCore/include/Logging/: ConsoleColors.hpp  Logging.hpp  LoggingPrefix.hpp
EngineCore/include/Rendering/: AxisMeshBuilder.hpp  AxisRenderer.hpp  Font.hpp  GLCommon.hpp  GeneratorMeshBuilder.hpp  IMeshBuilder.hpp  IRenderer.hpp  Mesh.hpp  MeshBuildContext.hpp  MeshRenderer.hpp  Renderer2D.hpp  Renderer3D.hpp  Shader.hpp  SpriteMeshBuilder.hpp  SpriteRenderer.hpp  SupplyData.hpp  TextMeshBuilder.hpp  TextRenderer.hpp  Texture.hpp  Transform.hpp  VulkanRenderingEngine.hpp  framework.hpp
EngineCore/include/Rendering/MeshBuilders/: AxisMeshBuilder.hpp  GeneratorMeshBuilder.hpp  IMeshBuilder.hpp  MeshBuildContext.hpp  SpriteMeshBuilder.hpp  TextMeshBuilder.hpp
EngineCore/include/Rendering/Renderers/: Renderer.hpp
EngineCore/include/Rendering/Vulkan/: DeviceManager.hpp  HoldsVMA.hpp  HoldsVulkanDevice.hpp  ImportVulkan.hpp  PipelineManager.hpp  VBuffer.hpp  VCommandBuffer.hpp  (+18 more)
EngineCore/include/Scripting/: CrossStateFunctionCall.hpp  EventLuaScript.hpp  FFI_Mappings.hpp  GeneratorLuaScript.hpp  ILuaScript.hpp  LuaScript.hpp  LuaScriptExecutor.hpp  LuaValue.hpp  Mappings.hpp  Utility.hpp
EngineCore/src/: AssetManager.cpp  Engine.cpp  EnumStringConvertor.cpp  Exception.cpp  GlobalSceneManager.cpp  InternalEngineObject.cpp  Object.cpp  ObjectFactory.cpp  OpaqueEngine.cpp  Scene.cpp  SceneLoader.cpp  SceneManager.cpp  SceneObject.cpp  dllmain.cpp  feature_test.cpp
EngineCore/src/Assets/: AssetManager.cpp  Font.cpp  Mesh.cpp  Texture.cpp
EngineCore/src/Factories/: FontFactory.cpp  ObjectFactory.cpp  TextureFactory.cpp
EngineCore/src/Logging/: ConsoleColors.cpp  Logging.cpp
EngineCore/src/Rendering/: AxisMeshBuilder.cpp  AxisRenderer.cpp  Font.cpp  GeneratorMeshBuilder.cpp  IMeshBuilder.cpp  IRenderer.cpp  Mesh.cpp  MeshRenderer.cpp  Renderer2D.cpp  Renderer3D.cpp  Shader.cpp  SpriteMeshBuilder.cpp  SpriteRenderer.cpp  TextMeshBuilder.cpp  TextRenderer.cpp  Texture.cpp  VulkanRenderingEngine.cpp
EngineCore/src/Scripting/: CrossStateFunctionCall.cpp  EventLuaScript.cpp  FFI_Mappings.cpp  GeneratorLuaScript.cpp  ILuaScript.cpp  LuaScript.cpp  LuaScriptExecutor.cpp  LuaValue.cpp  Mappings.cpp  Utility.cpp
EngineLogging/: CMakeLists.txt
EngineLogging/export_include/Logging/: Logging.hpp  LoggingPrefix.hpp
EngineLogging/include/: ConsoleColors.hpp  Logging.hpp  LoggingPrefix.hpp
EngineLogging/src/: ConsoleColors.cpp  Logging.cpp  LoggingPrefix.cpp
EngineRenderingVulkan/: CMakeLists.txt
EngineRenderingVulkan/export_include/: VulkanStructDefs.hpp
EngineRenderingVulkan/include/: ImportVulkan.hpp  PipelineManager.hpp  VulkanStructDefs.hpp  VulkanUtilities.hpp  fwd.hpp
EngineRenderingVulkan/include/Wrappers/: Buffer.hpp  CommandBuffer.hpp  CommandPool.hpp  DeviceScore.hpp  HandleWrapper.hpp  HoldsVMA.hpp  Image.hpp  Instance.hpp  LogicalDevice.hpp  MemoryAllocator.hpp  PhysicalDevice.hpp  Pipeline.hpp  Queue.hpp  RenderPass.hpp  SampledImage.hpp  ShaderModule.hpp  Surface.hpp  Swapchain.hpp  Window.hpp  framework.hpp
EngineRenderingVulkan/include/backend/: DeviceScore.hpp  Instance.hpp  LogicalDevice.hpp  MemoryAllocator.hpp  PhysicalDevice.hpp  ShaderCompiler.hpp
EngineRenderingVulkan/include/common/: HandleWrapper.hpp  HoldsVMA.hpp  InstanceOwned.hpp  StructDefs.hpp  Utilities.hpp  Utility.hpp
EngineRenderingVulkan/include/objects/: Buffer.hpp  CommandBuffer.hpp  CommandPool.hpp  Image.hpp  SampledImage.hpp  Sampler.hpp
EngineRenderingVulkan/include/rendering/: Pipeline.hpp  PipelineManager.hpp  PipelineSettings.hpp  RenderPass.hpp  ShaderModule.hpp  Surface.hpp  Swapchain.hpp  Window.hpp
EngineRenderingVulkan/src/: DispatchLoaderDynamic.cpp  PipelineManager.cpp  lib_impl.cpp
EngineRenderingVulkan/src/Wrappers/: Buffer.cpp  CommandBuffer.cpp  CommandPool.cpp  DeviceScore.cpp  Image.cpp  Instance.cpp  LogicalDevice.cpp  MemoryAllocator.cpp  PhysicalDevice.cpp  Pipeline.cpp  RenderPass.cpp  SampledImage.cpp  ShaderModule.cpp  Surface.cpp  Swapchain.cpp  Window.cpp
EngineRenderingVulkan/src/backend/: DebugCallback.cpp  DeviceScore.cpp  Instance.cpp  LogicalDevice.cpp  MemoryAllocator.cpp  PhysicalDevice.cpp  ShaderCompiler.cpp
EngineRenderingVulkan/src/objects/: Buffer.cpp  CommandBuffer.cpp  CommandPool.cpp  Image.cpp  SampledImage.cpp  Sampler.cpp
EngineRenderingVulkan/src/rendering/: Pipeline.cpp  PipelineManager.cpp  RenderPass.cpp  ShaderModule.cpp  Surface.cpp  Swapchain.cpp  Window.cpp
rungame/: CMakeLists.txt  EngineCore.hpp  Makefile  main.cpp  rungame.filters  rungame.vcxproj  survivalgame.vcxproj
rungame/include/: win32_console.hpp
rungame/lib/: glfw3.lib
rungame/src/: main.cpp
runtest/: CMakeLists.txt
runtest/include/: boilerplate.hpp  test_engine.hpp  test_logging.hpp  test_vulkan.hpp
runtest/src/: main.cpp  test_engine.cpp  test_logging.cpp  test_vulkan.cpp
runtest/testgame/models/: cube.mtl
runtest/testgame/scripts/: eventHandlers.lua
(+203 files in other folders)
